# ChangeLog for dev-perl/Class-Accessor
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Accessor/ChangeLog,v 1.49 2008/09/15 17:52:18 tove Exp $

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Class-Accessor-0.22.ebuild,
  -Class-Accessor-0.27.ebuild, -Class-Accessor-0.30.ebuild:
  Cleanup

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Class-Accessor-0.31.ebuild:
  Stable for HPPA too.

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Class-Accessor-0.31.ebuild:
  ppc. stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Class-Accessor-0.31.ebuild:
  amd64 stable

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> Class-Accessor-0.31.ebuild:
  Stable on ppc64

  06 Oct 2007; Raúl Porcel <armin76@gentoo.org> Class-Accessor-0.31.ebuild:
  alpha/ia64/sparc/x86 stable

*Class-Accessor-0.31 (19 Aug 2007)

  19 Aug 2007; Yuval Yaari <yuval@gentoo.org> +Class-Accessor-0.31.ebuild:
  Version bump

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Class-Accessor-0.30.ebuild:
  ppc stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Class-Accessor-0.30.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Class-Accessor-0.30.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Class-Accessor-0.30.ebuild:
  Stable on Alpha + IA64.

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> Manifest:
  Marking amd64 stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Class-Accessor-0.30.ebuild:
  Marking amd64 stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Class-Accessor-0.19.ebuild, Class-Accessor-0.22.ebuild,
  -Class-Accessor-0.25.ebuild, Class-Accessor-0.27.ebuild,
  Class-Accessor-0.30.ebuild:
  Marking sparc stable

*Class-Accessor-0.30 (29 Nov 2006)

  29 Nov 2006; Yuval Yaari <yuval@gentoo.org> +Class-Accessor-0.30.ebuild:
  Version bump
