@@ -1,0 +1,19 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Accessor/Class-Accessor-0.33.ebuild,v 1.1 2009/05/04 19:17:26 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=KASEI
+inherit perl-module
+
+DESCRIPTION="Automated accessor generation"
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
+IUSE=""
+
+RDEPEND="dev-perl/Sub-Name"
+DEPEND="${RDEPEND}"
+
+SRC_TEST="do"
