@@ -1,6 +1,6 @@
-DIST Class-Accessor-0.30.tar.gz 10638 RMD160 5bf20db650b08034a13e0410469f20775f24dd04 SHA1 4f1221cb4417db097e096d136befca8165047d50 SHA256 566960fe0bf6bbb472f80eede44ff7f6f65eb9af5828d36eec1902d8824212b2
 DIST Class-Accessor-0.31.tar.gz 10964 RMD160 72f3f40e7fba2a2a894b53f3ead1404241154833 SHA1 f7925450ca9b567251854e672a3631ccfd20b131 SHA256 3eea2cd932892b104a3ca64576d2e5af32f0543dc416b54cbb7125d7302e9ba8
-EBUILD Class-Accessor-0.30.ebuild 555 RMD160 536a2191ae0dccfe9b22479a4f933b6418dcc659 SHA1 a4dca3d262afaca1272c0d765c7f09315b4e58eb SHA256 a2ac88f521166c5b731a4509e14d05c801ca37bd296f9dc6f35811783d563529
+DIST Class-Accessor-0.33.tar.gz 11678 RMD160 5c7ff6125e111add3489cfaabafb06b0e1e419d6 SHA1 2acec5af328357732f9116e41108f2fbf73afb25 SHA256 ac6e8de9c136c6d3b051cf7019a149f9a21f8c71dd25bd49328447672d8a02e5
 EBUILD Class-Accessor-0.31.ebuild 559 RMD160 de56d85a5f726ce6d639cf8afa24ddb696c173ed SHA1 ead8de8ffb618fd6a4ba1a77b463926d76ba5634 SHA256 0dbb980af0401d28542965f82de8c2f6441ccb4fcbb1c4327884a2c5d4079181
-MISC ChangeLog 5674 RMD160 bb2ee7c6d8f9d39f20db40ae88260829a304c733 SHA1 f6e0f104efcc0060e6071bc04a30ce5d474c48da SHA256 a605cf0148a5b5f58688664fdf6a04b6faf359109cafb0c2a67acb730f1fddb0
+EBUILD Class-Accessor-0.33.ebuild 478 RMD160 cda320b858f7b5364b00a602c368f861f418e93a SHA1 c6dfa93a69c02176db1c9fbaa021ca67603ab4ad SHA256 9f56bdc7252b14d11be89df460f015055ff73d5664eb4f90c08d8791ed018711
+MISC ChangeLog 5803 RMD160 155225c540e2d85fae14e2cdc5c4685b3c33a0a4 SHA1 97c5e5cc765a856ba66bb2131420dc0721779445 SHA256 fafb765c327e622eb9a25c623313b32abc4c491e20e380e3dbc2df887b284cca
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
