@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-Accessor
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Accessor/ChangeLog,v 1.49 2008/09/15 17:52:18 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Accessor/ChangeLog,v 1.50 2009/05/04 19:17:26 tove Exp $
+
+*Class-Accessor-0.33 (04 May 2009)
+
+  04 May 2009; Torsten Veller <tove@gentoo.org> +Class-Accessor-0.33.ebuild:
+  Version bump
 
   15 Sep 2008; Torsten Veller <tove@gentoo.org> -Class-Accessor-0.22.ebuild,
   -Class-Accessor-0.27.ebuild, -Class-Accessor-0.30.ebuild:
